--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = YOUR_MONGO_DB
+MONGODB_URL = "mongodb+srv://sportmedia:8eFyTLDRTO8FMLAG@sportix.tmgbr.mongodb.net/Sportix?retryWrites=true&w=majority"
 
-ACCESS_TOKEN_SECRET = youraccesstokensecret
-REFRESH_TOKEN_SECRET = yourrefreshtokensecret
+ACCESS_TOKEN_SECRET = myaccesstokensecret001
+REFRESH_TOKEN_SECRET = myrefreshtokensecret00132141332
