--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v-network",
+  "name": "sportix",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -14,24 +14,25 @@
     "install-all": "concurrently \"npm run server-install\" \"npm run client-install\" \"npm run news-install\" ",
     "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run news\" ",
     "heroku-postbuild": "concurrently \"cd client && npm install && npm run build\" \"cd client/src/pages/newsv && npm install && npm run build\" "
-   
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "concurrently": "^6.0.0",
+    "bcrypt": "^5.0.1",
+    "concurrently": "^6.2.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.13",
+    "mongoose": "^6.0.8",
     "peer": "^0.6.1",
-    "socket.io": "^3.1.2"
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+    "nodemon": "^2.0.13"
+  },
+  "engines" : { "node" : "14.17.0" , "npm" : "7.24.1"}
+
 }
